syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-gorm/options/gorm.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
// import "mwitkow/go-proto-validators/validator.proto";

package bg.service.v1;
option go_package = "./pb";

enum BgStatus {
    Active = 0;
    InActive = 1;
    Claimed = 2;
}

enum BgType {
    BidBond = 0;
    AdvancePayment = 1;
    PerformanceBond = 2;
    GovernmentPaymentGuarantee = 3;
    MaintenanceBond = 4;
    ProcurementBond = 5;
    TransactionRiskBond = 6;
    CustomsBond = 7;
}

message ThirdParty {
    option (gorm.opts) = {
        ormable: true,
        table: "third_parties",
    };
    uint64 id = 1 [(gorm.field).tag = {primary_key: true not_null: true}];
    uint64 thirdPartyID = 2 [(gorm.field).tag = {not_null: true}];
    string name = 3 [(gorm.field).tag = {not_null: true}];
    google.protobuf.Timestamp createdAt = 51 [
        (google.api.field_behavior) = OUTPUT_ONLY,
        (gorm.field).tag = {not_null: true}
    ];
    google.protobuf.Timestamp updatedAt = 52 [
        (google.api.field_behavior) = OUTPUT_ONLY, 
        (gorm.field).tag = {not_null: true}
    ];
}

message Transaction {
    option (gorm.opts) = {
        ormable: true,
        table: "transactions",
    };
    uint64 id = 1 [(gorm.field).tag = {primary_key: true not_null: true}];
    uint64 transactionID = 2 [(gorm.field).tag = {not_null: true}];
    uint64 thirdPartyID = 3;
    string referenceNo = 4 [(gorm.field).tag = {not_null: true}];
    string registrationNo = 5 [(gorm.field).tag = {not_null: true}];
    string applicantName = 6 [(gorm.field).tag = {not_null: true}];
    string beneficiaryName = 7 [(gorm.field).tag = {not_null: true}];
    string issueDate = 8 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            format: "date",
            pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}$", 
            example: "\"2022-07-06\""
        },
        (gorm.field).tag = {not_null: true}
    ];
    string effectiveDate = 9 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            format: "date",
            pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}$", 
            example: "\"2022-07-06\""
        },
        (gorm.field).tag = {not_null: true}
    ];
    string expiryDate = 10 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            format: "date",
            pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}$", 
            example: "\"2022-07-06\""
        },
        (gorm.field).tag = {not_null: true}
    ];
    uint64 claimPeriod = 11 [(gorm.field).tag = {not_null: true}];
    string closingDate = 12 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            format: "date",
            pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}$", 
            example: "\"2022-07-06\""
        },
        (gorm.field).tag = {not_null: true}
    ];
    string currency = 13 [(gorm.field).tag = {not_null: true}];
    double amount = 14 [(gorm.field).tag = {not_null: true}];
    string remark = 15 [(gorm.field).tag = {not_null: true}];
    string transactionStatus = 16 [(gorm.field).tag = {not_null: true}];
    uint64 channelID = 17;
    string channelName = 18;
    uint64 transactionTypeID = 19;
    string documentPath = 20;
    uint64 companyID = 21 [(gorm.field).tag = {not_null: true}];
    string status = 22 [(gorm.field).tag = {not_null: true}];
    bool isAllowBeneficiary = 23 [(gorm.field).tag = {not_null: true}];
    uint64 createdByID = 41 [
        (google.api.field_behavior) = OUTPUT_ONLY,
        (gorm.field).tag = {not_null: true}
    ];
    uint64 updatedByID = 42 [
        (google.api.field_behavior) = OUTPUT_ONLY,
        (gorm.field).tag = {not_null: true}
    ];
    google.protobuf.Timestamp createdAt = 51 [
        (google.api.field_behavior) = OUTPUT_ONLY,
        (gorm.field).tag = {not_null: true}
    ];
    google.protobuf.Timestamp updatedAt = 52 [
        (google.api.field_behavior) = OUTPUT_ONLY, 
        (gorm.field).tag = {not_null: true}
    ];
}
